--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,34 @@
+arrow==1.2.2
 asgiref==3.5.1
+binaryornot==0.4.4
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.12
+click==8.1.3
 colorama==0.4.4
+cookiecutter==1.7.3
 decorator==5.1.1
 distlib==0.3.4
 Django==4.0.4
+django-browser-reload==1.4.0
+django-tailwind==3.1.1
 filelock==3.6.0
 fontawesomefree==6.1.1
+idna==3.3
+Jinja2==3.1.2
+jinja2-time==0.2.0
+MarkupSafe==2.1.1
 platformdirs==2.5.1
+poyo==0.5.0
 psutil==5.9.0
 pyte==0.8.1
+python-dateutil==2.8.2
+python-slugify==6.1.2
+requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
+text-unidecode==1.3
 thefuck==3.32
+urllib3==1.26.9
 virtualenv==20.13.2
 wcwidth==0.2.5
