--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,13 @@ idna==3.3
 Jinja2==3.1.2
 jinja2-time==0.2.0
 MarkupSafe==2.1.1
+mysqlclient==2.1.0
 platformdirs==2.5.1
 poyo==0.5.0
 psutil==5.9.0
 pyte==0.8.1
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 python-slugify==6.1.2
 requests==2.27.1
 six==1.16.0
