--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,53 @@
+amqp==5.1.1
 arrow==1.2.2
 asgiref==3.5.1
+billiard==3.6.4.0
 binaryornot==0.4.4
+celery==5.2.7
 certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.4
 cookiecutter==1.7.3
 decorator==5.1.1
 distlib==0.3.4
-Django==4.0.4
+Django==3.2.13
 django-browser-reload==1.4.0
+django-celery-beat==2.2.1
+django-formtools==2.3
+django-otp==1.1.3
+django-phonenumber-field==6.1.0
 django-tailwind==3.1.1
+django-timezone-field==4.2.3
 filelock==3.6.0
 fontawesomefree==6.1.1
 idna==3.3
 Jinja2==3.1.2
 jinja2-time==0.2.0
+kombu==5.2.4
 MarkupSafe==2.1.1
 mysqlclient==2.1.0
 platformdirs==2.5.1
 poyo==0.5.0
+prompt-toolkit==3.0.29
 psutil==5.9.0
 pyte==0.8.1
+python-crontab==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-slugify==6.1.2
+pytz==2022.1
+qrcode==7.3.1
 requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
 text-unidecode==1.3
 thefuck==3.32
 urllib3==1.26.9
+vine==5.0.0
 virtualenv==20.13.2
 wcwidth==0.2.5
