--- a/.env_example
+++ b/.env_example
@@ -7,5 +7,10 @@ DB_PORT=
 BANK_CONTROLLER_ENDPOINT=
 BANK_CONTROLLER_TOKEN=
 
-SMS_API_URL=
-SMS_API_KEY=
+# Twilio
+SMS_API_TOKEN=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
