Add signal when customer apply for loan

--- a/.env_example
+++ b/.env_example
@@ -7,5 +7,9 @@ DB_PORT=
 BANK_CONTROLLER_ENDPOINT=
 BANK_CONTROLLER_TOKEN=
 
-SMS_API_URL=
-SMS_API_KEY=
+SMS_API_TOKEN=
+
+EMAIL_HOST_PASSWORD=
+
+DEFAULT_DOMAIN=
+DEFAULT_PROTOCOL=
