--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ distlib==0.3.4
 Django==3.2.13
 django-browser-reload==1.4.0
 django-celery-beat==2.2.1
+django-crontab==0.7.1
 django-formtools==2.3
 django-otp==1.1.3
 django-phonenumber-field==6.1.0
